fixed bug: link text color wasn't changed according to theme
changes scrollbar light color to something better
disabled pretty print on jsoup html output
stdout and stderr are now directed to text files

--- a/src/com/pouria/chatman/gui/TextArea.css
+++ b/src/com/pouria/chatman/gui/TextArea.css
@@ -23,3 +23,7 @@ body{
 .time{
 	font-size: 0px;
 }
+
+.link{
+	font-weight: bold;
+}
